kustomization/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: rpk-client
  namespace: rpk-client
  labels:
    app: rpk-client
spec:
  minReadySeconds: 3
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: rpk-client
  template:
    metadata:
      labels:
        app: rpk-client
    spec:
      containers:
      - name: rpk-client
        image: rampike/rpk-client:0.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: web
          containerPort: 4000
        livenessProbe:
          httpGet:
            path: /
            port: 4000
          initialDelaySeconds: 5
          timeoutSeconds: 5
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: 4000
          initialDelaySeconds: 5
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 2000m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 64Mi
