kustomization/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rpk-client
  namespace: rpk-client
spec:
  selector:
    app: rpk-client
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4000
  type: ClusterIP
