kustomization/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rpk-client
  namespace: rpk-client
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`client.rampike.de`)
    kind: Rule
    services:
    - name: rpk-client
      port: 80
  tls:
    secretName: rpk-client-certificate
